fix certificate align

--- a/docs/css/styleSkills.css
+++ b/docs/css/styleSkills.css
@@ -148,14 +148,16 @@ p {
 }
 .certificado{
     display: grid;
-    grid-template-columns: repeat(4,1fr); /* Columnas de tamaño mínimo de 100px */
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Ajusta el tamaño mínimo y máximo de las columnas */
     gap: 10px; /* Espacio entre las imágenes */
     justify-items: center; /* Centra las imágenes horizontalmente en cada celda */
+    padding: 2rem; /* Agrega un espacio interno al contenedor */
 }
 .certificado img{
     width: 90%; /* Para que las imágenes no se salgan del contenedor */
-    height: 80%; /* Para mantener la proporción de la imagen */
+    height: auto; /* Para mantener la proporción de la imagen */
     object-fit: cover;
+    border-radius: 10px; /* Agrega bordes redondeados a las imágenes */
 }
 
 /* Media query para hacer el header responsivo */
